# hackports

./: .gitignore  Digest.hs  LICENSE  Main.hs  README.textile  TODO.txt  hackports.cabal  hackports.hs  hscompare.cabal
Data/Compare/: Content.hs  Delta.hs  Element.hs  Hierarchy.hs
Distribution/Client/: HttpUtils.hs
hsResolve/: Diagram.vpp  Diagram.vpp~3  Diagram.vpp~4
